Expand width, style archive view

--- a/diazotheme/colonialart/diazo_resources/index.html
+++ b/diazotheme/colonialart/diazo_resources/index.html
@@ -12,7 +12,7 @@
     <div id="portal-top">
         <div id="portal-searchbox" />
         <div id="banner">
-            <a title="Project on the Engraved Sources of Colonial Art"><img src="static/logo.jpg" title="Project on the Engraved Sources of Colonial Art" /></a>
+            <a title="Project on the Engraved Sources of Colonial Art"><img src="static/PESSCA-logo.jpg" title="Project on the Engraved Sources of Colonial Art" /></a>
         </div>
     </div>
     <p class="hiddenStructure">Navigation</p>
