--- a/diazotheme/colonialart/diazo_resources/index.html
+++ b/diazotheme/colonialart/diazo_resources/index.html
@@ -25,5 +25,14 @@
     </div>
 </div>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-1214324-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-1214324-10');
+</script>
+
 </body>
 </html>
